# movies-buddy

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: 01-embeddings.ipynb  01-solutions-embeddings.ipynb  02-solutions-vector_database.ipynb  02-vector-database.ipynb  02-vector_databases.ipynb  03-rag-from-scratch.ipynb  03-rag_from_scratch.ipynb  03-solutions-rag_from_scratch.ipynb  embeddings.ipynb  vector-database.ipynb
src/movie_buddy/: data.py  utils.py
src/movie_buddy/preprocessing/: movies_dataset.py  utils.py  visualization.py
