[project]
name = "movie-buddy"
version = "0.1.0"
description = "Your AI-powered movie buddy"
authors = [
    {name = "baggiponte", email = "57922983+baggiponte@users.noreply.github.com"},
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "qdrant-client>=1.7.3",
    "openai>=1.12.0",
    "sentence-transformers>=2.4.0",
    "umap-learn>=0.5.5",
    "plotly>=5.19.0",
    "pandas>=2.2.1",
    "ipywidgets>=8.1.2",
]

[project.scripts]
buddy = "movie_buddy.cli:main"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.2",
    "nbstripout>=0.7.1",
]
ide = [
    "jupyterlab>=4.1.2",
]
