[tool.poetry]
name = "movies-buddy"
version = "0.1.0"
description = ""
authors = ["Luca Baggi <luca.baggi@xtreamers.io>"]
readme = "README.md"
packages = [
    { include = "movie_buddy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "^3.0.1"
pandas = { version = "^2.2.2", extras = ["pyarrow"] }
tqdm = "^4.66.4"
plotly = "^5.22.0"
umap-learn = "^0.5.6"
qdrant-client = "^1.9.2"
openai = "^1.35.3"


[tool.poetry.group.ide.dependencies]
jupyterlab = "^4.2.2"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
